@@ -233,6 +233,17 @@ spawn-rate=1
 # unclean plugin. Default: no
 fork_on_exec=no
 
+# Set a limit based on the 1min load average. When exceding the load limit,
+# no new worker will be started until the current load is below the limit.
+# No limit will be used when set to 0.
+load_limit1=0
+
+# Same as load_limit1 but for the 5min load average.
+load_limit5=0
+
+# Same as load_limit1 but for the 15min load average.
+load_limit15=0
+
 # Use this option to show stderr output of plugins too.
 # Default: yes
 show_error_output=yes
