@@ -4,6 +4,7 @@ This file documents the revision history for mod_gearman.
           - force check on orphaned events
           - added mini epn
           - added logrotate config (Ricardo Maraschini)
+          - added new option load_limit1,5,15 to prevent new workers from spawning under heavy load. (sponsored by Ovido GmbH)
 
 1.3.8 Sun Aug 19 16:52:13 CEST 2012
           - fixed sending 2 results back when hit timeout
